# MATH498-Sparse-Autoencoder-Manipulation

./: .gitignore  README.md  demo.py  experiments.py  explorationoutput.html  explore.py  feature_steering.py  index.html  main.py  out.txt  pyproject.toml  requirements.txt  sae_generation.py  sample.txt  steering_utils.py  trainable_sae.py  writeup.html  writeup.tex
docs/: update_042226_questions_contributions.md
docs/final_writeup/html/: writeup.html  (+2 more)
experiment_scripts/: affectations.py  affectations2.py  bulk_features.py  grid_search.py  run_delta_avg_experiments.py  run_trainable_batch_results.py  steering_dashboard.py  visualize_trainable_results.py
experiment_scripts/experiment_data/: bulk_features_sample_text.txt  invariant_sae_steering_prompts.txt  sensitive_sae_steering_prompts.txt
experiment_scripts/trainable_results/: trainable_results_invariant_sae_steering_prompts_20260509_071905.csv  (+12 more)
notebooks/: affectations2_hot_cold.ipynb  affectations_happy_sad.ipynb  load_and_visualize_saes.ipynb  plot_saved_sae_losses.ipynb  test.ipynb  train_gemma3_270m_tbk_sae.ipynb
samples/: prompts.txt  question.txt  questions_all.txt  questions_test.txt  questions_train.txt  questions_val.txt  sample.txt  sample2.txt  sample3.txt  shark_danger.txt  story.txt
scripts/: compare_notebook_vs_web.py  generate_data.py  generate_question_data.py  run_delta_avg_experiments.py  train_four_saes.py  train_sae.py  update_plots.py
web/: feature_steering_experiment_charts.html  log.csv  readme.md  sae_playground_deployment.md  static_sae_playground.html  web_sae_playground.py
(+538 files in other folders)
