[project]
name = "idea-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets",
    "ipykernel>=7.1.0",
    "numpy>=2.4.4",
    "rich>=15.0.0",
    "sae-lens>=6.39.0",
    "torch",
    "transformer-lens>=3.0.0",
    "matplotlib",

]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
